--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
       </div>
     </div>
 
-    <footer id="footer" class="container content bg-light border my-auto">
+    <footer id="footer" class="footer fixed-bottom container content bg-light border my-auto">
       <p>&copy; 2016 TGIF | All Right Reserved</p>
     </footer>
 
