--- a/senate-party-loyalty.html
+++ b/senate-party-loyalty.html
@@ -1,201 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" type="text/css" href="main.css" />
-    <title>Senate Party Loyalty</title>
-  </head>
 
-  <body>
-    <nav
-      id="navbar"
-      class="container navbar navbar-expand-lg navbar-light bg-light border sticky-top"
-    >
-      <a class="navbar-brand" href="index.html">
-        <img
-          src="Images/iconHouse2.png"
-          width="30"
-          height="30"
-          class="d-inline-block align-top"
-          alt=""
-        />
-        TGIF
-      </a>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <link rel="stylesheet" type="text/css" href="main.css" />
+  <title>Senate Party Loyalty</title>
+</head>
 
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
+<body>
+  <nav id="navbar" class="container navbar navbar-expand-lg navbar-light bg-light border sticky-top">
+    <a class="navbar-brand" href="index.html">
+      <img src="Images/iconHouse2.png" width="30" height="30" class="d-inline-block align-top" alt="" />
+      TGIF
+    </a>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html"
-              >Home <span class="sr-only">(current)</span></a
-            >
-          </li>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              Congress 113
-            </a>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        </li>
 
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="house-data.html">House</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="senate-data.html">Senate</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              Attendance
-            </a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Congress 113
+          </a>
 
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="house-attendance.html">House</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="senate-attendance.html">Senate</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              Party Loyalty
-            </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="house-data.html">House</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="senate-data.html">Senate</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Attendance
+          </a>
 
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="house-party-loyalty.html">House</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="senate-party-loyalty.html"
-                >Senate</a
-              >
-            </div>
-          </li>
-        </ul>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="house-attendance.html">House</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="senate-attendance.html">Senate</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Party Loyalty
+          </a>
+
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="house-party-loyalty.html">House</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="senate-party-loyalty.html">Senate</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <header>
+    <div></div>
+  </header>
+  <!--Table container-->
+  <div class="container">
+    <div class="row">
+      <div class="col content">
+        <h2>Party Loyalty</h2>
+        <p>
+          Those who consider themselves to be strong partisans, strong
+          Democrats and strong Republicans respectively, tend to be the most
+          faithful in voting for their party's nominee for office and
+          legislation that backs their party's agenda.
+        </p>
       </div>
-    </nav>
+      <div class="col content">
+        <h2>Senate at a glance</h2>
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th>Party</th>
+              <th>Number of Reps</th>
+              <th>% Voted with Prty</th>
+            </tr>
+          </thead>
+          <tbody id="glance">
 
-    <header>
-      <div></div>
-    </header>
-    <!--Table container-->
-    <div class="container">
-      <div class="row">
-        <div class="col content">
-          <h2>Party Loyalty</h2>
-          <p>
-            Those who consider themselves to be strong partisans, strong
-            Democrats and strong Republicans respectively, tend to be the most
-            faithful in voting for their party's nominee for office and
-            legislation that backs their party's agenda.
-          </p>
-        </div>
-        <div class="col content">
-          <h2>Senate at a glance</h2>
-          <table class="table table-hover">
-            <thead>
-              <tr>
-                <th>Party</th>
-                <th>Number of Reps</th>
-                <th>% Voted with Prty</th>
-              </tr>
-            </thead>
-            <tbody id="glance">
-
-            </tbody>
-          </table>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col content">
-          <h2>Least Loyal (Bottom 10% of Party)</h2>
-          <table class="table table-stripped table-hover">
-            <thead>
-              <tr>
-                <th>Name</th>
-                <th>Number Party Votes</th>
-                <th>% Party Votes</th>
-              </tr>
-            </thead>
-            <tbody id="least">
-              
-            </tbody>
-          </table>
-        </div>
-        <div class="col content">
-          <h2>Most Loyal (Top 10% of Party)</h2>
-          <table class="table table-stripped table-hover">
-            <thead>
-              <tr>
-                <th>Name</th>
-                <th>Number Party Votes</th>
-                <th>% Party Votes</th>
-              </tr>
-            </thead>
-            <tbody id="most">
-              
-            </tbody>
-          </table>
-        </div>
+          </tbody>
+        </table>
       </div>
     </div>
+    <div class="row">
+      <div class="col content">
+        <h2>Least Loyal (Bottom 10% of Party)</h2>
+        <table class="table table-stripped table-hover">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Number Party Votes</th>
+              <th>% Party Votes</th>
+            </tr>
+          </thead>
+          <tbody id="least">
 
-    <script src="113-senate.js"></script>
-    <script src="statistics.js"></script>
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+          </tbody>
+        </table>
+      </div>
+      <div class="col content">
+        <h2>Most Loyal (Top 10% of Party)</h2>
+        <table class="table table-stripped table-hover">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Number Party Votes</th>
+              <th>% Party Votes</th>
+            </tr>
+          </thead>
+          <tbody id="most">
+
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
+  <script src="113-senate.js"></script>
+  <script src="statistics.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
+  <script>
+    createStatisticsTable(leastTable, statistics.leastLoyal, "party_votes", "votes_with_party_pct");
+    createStatisticsTable(mostTable, statistics.mostLoyal, "party_votes", "votes_with_party_pct");
+  </script>
+</body>
+
 </html>
