--- a/house-party-loyalty.html
+++ b/house-party-loyalty.html
@@ -150,6 +150,10 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 		crossorigin="anonymous"></script>
+		<script>
+			createStatisticsTable(leastTable, statistics.leastLoyal, "party_votes", "votes_with_party_pct");
+			createStatisticsTable(mostTable, statistics.mostLoyal, "party_votes", "votes_with_party_pct");
+		</script>
 </body>
 
 </html>
