--- a/house-data.html
+++ b/house-data.html
@@ -153,42 +153,31 @@
         Filter by Party:
         <label
           ><input
-            type="radio"
-            name="party"
-            id="all"
-            value="All"
-            onclick="partyFilter();"
-            checked
-          />
-          Show All
-        </label>
-        <label
-          ><input
-            type="radio"
-            name="party"
-            id="republican"
+            type="checkbox"
+            name="partyCheckbox"
             value="R"
-            onclick='partyFilter("R");'
+            onclick='updateTableWithNewState();'
+            checked
           />
           Republican
         </label>
         <label
           ><input
-            type="radio"
-            name="party"
-            id="democrat"
+            type="checkbox"
+            name="partyCheckbox"
             value="D"
-            onclick='partyFilter("D");'
+            onclick='updateTableWithNewState();'
+            checked
           />
           Democrat
         </label>
         <label
           ><input
-            type="radio"
-            name="party"
-            id="independent"
+            type="checkbox"
+            name="partyCheckbox"
             value="I"
-            onclick='partyFilter("I");'
+            onclick='updateTableWithNewState();'
+            checked
           />
           Independent
         </label>
