--- a/house-attendance.html
+++ b/house-attendance.html
@@ -105,7 +105,21 @@
 						</tr>
 					</thead>
 					<tbody id="glance">
-						
+						<tr>
+							<td>Democrats</td>
+							<td>{{ numberOfDemocrats }}</td>
+							<td>{{ democratsAverageVoteWithParty }}</td>
+						</tr>
+						<tr>
+							<td>Republicans</td>
+							<td>{{ numberOfRepublicans }}</td>
+							<td>{{ republicansAverageVoteWithParty }}</td>
+						</tr>
+						<tr>
+							<td>Independents</td>
+							<td>{{ numberOfIndependents }}</td>
+							<td>{{ independentAverageVoteWithParty }}</td>
+						</tr>
 					</tbody>
 				</table>
 			</div>
@@ -124,12 +138,12 @@
 						</tr>
 					</thead>
 					<tbody id="least">
-							<tr v-for="member in members">
-								<td>{{ member.full_name }}</td>
-								<td>{{ member.missed_votes }}</td>
-								<td>{{ member.missed_votes_pct }}</td>
-							</tr>
-						</tbody>
+						<tr v-for="member in members">
+							<td>{{ member.full_name }}</td>
+							<td>{{ member.missed_votes }}</td>
+							<td>{{ member.missed_votes_pct }}</td>
+						</tr>
+					</tbody>
 				</table>
 			</div>
 			<div class="col content">
@@ -151,26 +165,26 @@
 					</tbody>
 				</table>
 			</div>
-
 		</div>
 
 		<script src="113-house.js"></script>
 		<script src="statistics.js"></script>
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 			integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-		</script>
+			</script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
 			integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-		</script>
+			</script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 			integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-		</script>
+			</script>
 		<script>
-		function createVueTables(){
-			vueLeast.members = statistics.mostEngaged;
-			vueMost.members =  statistics.leastEngaged;
-		}
+			function createVueTables() {
+				vueLeast.members = statistics.mostEngaged;
+				vueMost.members = statistics.leastEngaged;
+			}
 		</script>
+
 </body>
 
 </html>
