--- a/house-party-loyalty.html
+++ b/house-party-loyalty.html
@@ -97,7 +97,21 @@
 						</tr>
 					</thead>
 					<tbody id="glance">
-
+						<tr>
+							<td>Democrats</td>
+							<td>{{ numberOfDemocrats }}</td>
+							<td>{{ democratsAverageVoteWithParty }}</td>
+						</tr>
+						<tr>
+							<td>Republicans</td>
+							<td>{{ numberOfRepublicans }}</td>
+							<td>{{ republicansAverageVoteWithParty }}</td>
+						</tr>
+						<tr>
+							<td>Independents</td>
+							<td>{{ numberOfIndependents }}</td>
+							<td>{{ independentAverageVoteWithParty }}</td>
+						</tr>
 					</tbody>
 				</table>
 			</div>
@@ -116,7 +130,11 @@
 						</tr>
 					</thead>
 					<tbody id="least">
-
+						<tr v-for="member in members">
+							<td>{{ member.full_name }}</td>
+							<td>{{ member.party_votes }}</td>
+							<td>{{ member.votes_with_party_pct }}</td>
+						</tr>
 					</tbody>
 				</table>
 			</div>
@@ -131,7 +149,11 @@
 						</tr>
 					</thead>
 					<tbody id="most">
-
+						<tr v-for="member in members">
+							<td>{{ member.full_name }}</td>
+							<td>{{ member.party_votes }}</td>
+							<td>{{ member.votes_with_party_pct }}</td>
+						</tr>
 					</tbody>
 				</table>
 			</div>
@@ -151,10 +173,12 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 		crossorigin="anonymous"></script>
-		<script>
-			createStatisticsTable(leastTable, statistics.leastLoyal, "party_votes", "votes_with_party_pct");
-			createStatisticsTable(mostTable, statistics.mostLoyal, "party_votes", "votes_with_party_pct");
-		</script>
+	<script>
+		function createVueTables() {
+			vueLeast.members = statistics.leastLoyal;
+			vueMost.members = statistics.mostLoyal;
+		}
+	</script>
 </body>
 
 </html>
